完全动态json字符

--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -9,5 +9,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SqlLite": "Filename=Data.dll"
+  },
+  "TaskApiUrls": {
+    "TaskApiUrl": "http://localhost:5001/api/HandleTask"
   }
 }
