NLog 写入Sqlite 自定义服务注册与获取类

--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -1,9 +1,10 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Trace",
+      "Microsoft": "Trace",
+      "Microsoft.Hosting.Lifetime": "Trace"
     }
   },
   "AllowedHosts": "*",
