任务计划启动及结束由内存控制改为Redis控制

--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -9,7 +9,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SqlLite": "Filename=Data.dll"
+    "RedisConnectstring": "123456@152.136.31.172",
+      "RedisDb": 0
   },
   "TaskApiUrls": {
     "TaskApiUrl": "http://localhost:5001/api/HandleTask"
