todo 初次加载时判断input的状态

--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -10,7 +10,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RedisConnectstring": "123456@152.136.31.172",
-      "RedisDb": 0
+    "RedisDb": 0,
+    "SqlLite": "Data Source=Data.dll;"
   },
   "TaskApiUrls": {
     "TaskApiUrl": "http://localhost:5001/api/HandleTask"
