1 配置job工厂单例scope，保证NLog正常使用 2 修改dbhelper，执行存储过程部分

--- a/AutoSchedule/NLog.config
+++ b/AutoSchedule/NLog.config
@@ -27,6 +27,6 @@
   </targets>
   <rules>
     <logger name="Microsoft.*" minlevel="Trace" writeTo="blackhole" final="true" />
-    <logger name="*" writeTo="db" />
+    <logger name="*" writeTo="db" minlevel="Info"/>
   </rules>
 </nlog>
