--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -2,9 +2,9 @@
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft": "Trace",
-      "Microsoft.Hosting.Lifetime": "Trace"
+      "Default": "Information",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
   "AllowedHosts": "*",
