日志展示 分页 日志搜索

--- a/AutoSchedule/NLog.config
+++ b/AutoSchedule/NLog.config
@@ -14,14 +14,14 @@
             dbProvider="Microsoft.Data.Sqlite.SqliteConnection, Microsoft.Data.Sqlite"
             connectionString="Data Source=Data.dll;">
       <commandText>
-        insert into Logs (TimestampUtc, Application, Level, Message, Exception, Logger)
-        values (@timestamputc, @application, @level, @message, @exception, @logger);
+        insert into Logs (TimestampUtc, Application, Level, Message, EventId, Logger)
+        values (@timestamputc, @application, @level, @message, @eventId, @logger);
       </commandText>
       <parameter name="@timestamputc" layout="${date:universalTime=false:format=yyyy-MM-dd HH\:mm\:ss.fff}" />
       <parameter name="@application" layout="自动调度任务日志" />
       <parameter name="@level" layout="${level}" />
       <parameter name="@message" layout="${message}" />
-      <parameter name="@exception" layout="${exception:format=tostring}" />
+      <parameter name="@eventId" layout="${event-properties:EventId}" />
       <parameter name="@logger" layout="${logger}" />
     </target>
   </targets>
