--- a/AutoSchedule/Properties/launchSettings.json
+++ b/AutoSchedule/Properties/launchSettings.json
@@ -17,6 +17,7 @@
     },
     "AutoSchedule": {
       "commandName": "Project",
+      "launchUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
