--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -9,11 +9,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RedisConnectstring": "pwd@ip",
+    "RedisConnectstring": "123456@152.136.31.172",
     "RedisDb": 0,
     "SqlLite": "Data Source=Data.dll;"
   },
-  "urls":"http://*:5001",
+  "urls":"http://*:5000",
   "TaskApiUrls": {
     "TaskApiUrl": "http://localhost:5001/api/HandleTask"
   }
