--- a/AutoSchedule/NLog.config
+++ b/AutoSchedule/NLog.config
@@ -3,7 +3,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
       internalLogLevel="Info"
-      internalLogFile="Info信息.log">
+      internalLogFile="CommonInfo.log">
   <!--define various log targets-->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
