--- a/Identity4Center/appsettings.json
+++ b/Identity4Center/appsettings.json
@@ -7,8 +7,12 @@
     }
   },
   "RedirectUris": {
-    "服务中心回调地址":"http://localhost:20000/Auth/Index",
-    "还未发现的测试地址":"http://localhost:20000/Auth/Index"
+    "服务中心回调地址": "http://localhost:20000/Auth/Index",
+    "还未发现的测试地址": "http://localhost:20000/Auth/Index"
+  },
+  "ConnectionStrings": {
+    "SqlLiteWin": "Data Source=Db\\Data.dll;",
+    "SqlLiteLinux": "Data Source=Db/Data.dll;"
   },
   "urls": "http://*:20000",
   "AllowedHosts": "*"
