--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -14,7 +14,8 @@
     "RedisPwd": "123456",
     "SqlLiteWin": "Data Source=Db\\Data.dll;",
     "SqlLiteLinux": "Data Source=Db/Data.dll;",
-    "MessageDb": "User Id=dbo;Password=romens;Data Source=192.168.100.9:1521/NewStddata;"
+    "MessageDb": "User Id=dbo;Password=romens;Data Source=192.168.100.9:1521/NewStddata;",
+    "WebSocketStatus": "1"
   },
   "urls":"http://*:5001",
   "TaskApiUrls": {
