--- a/AutoSchedule/AutoSchedule.csproj
+++ b/AutoSchedule/AutoSchedule.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="FreeSql.Provider.Oracle" Version="1.3.6" />
+    <PackageReference Include="FreeSql.Provider.Sqlite" Version="1.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.3" />
