add a common error data processing every once in a while,delete the error data in the table

--- a/AutoSchedule/NLog.config
+++ b/AutoSchedule/NLog.config
@@ -12,7 +12,7 @@
     <target xsi:type="Database"
             name="db"
             dbProvider="Microsoft.Data.Sqlite.SqliteConnection, Microsoft.Data.Sqlite"
-            connectionString="Data Source=Db\\Data.dll;">
+            connectionString="Data Source=Db/Data.dll;">
       <commandText>
         insert into Logs (TimestampUtc, Application, Level, Message, EventId, Logger)
         values (@timestamputc, @application, @level, @message, @eventId, @logger);
