--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -1,24 +1,59 @@
 {
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning ",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "IncludeScopes": false,
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning ",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "RedisConnectstring": "152.136.31.172",
+        "RedisDb": 0,
+        "RedisPwd": "123456",
+        "SqlLiteWin": "Data Source=Db\\Data.dll;",
+        "SqlLiteLinux": "Data Source=Db/Data.dll;"
+    },
+    "urls": "http://*:5001",
+    "TaskApiUrls": {
+        "TaskApiUrl": "http://localhost:5001/api/HandleTask"
+    },
+
+  "IpRateLimiting": {
+    "QuotaExceededResponse": {
+      "Content": "{{ \"message\": \"访问被限制\", \"details\": \"最大允许值每{1}{0}次 请在{2}s后重试\" }}",
+      "ContentType": "application/json; charset=utf-8",
+      "StatusCode": 200
+    },
+    "EnableEndpointRateLimiting": true,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 200,
+    //"IpWhitelist": [ "127.0.0.1", "::1/10"],
+    // "EndpointWhitelist": [ "get:/api/license", "*:/api/status" ],
+    //"ClientWhitelist": [ "dev-id-1", "dev-id-2" ],
+    "GeneralRules": [
+      {
+        "Endpoint": "*:/*/*",
+        "Period": "1s",
+        "Limit": 2
+      }
+    ]
+  },
+    "IpRateLimitPolicies": {
+      "IpRules": [
+        {
+          "Ip": "84.247.85.224",
+          "Rules": [
+            {
+              "Endpoint": "*",
+              "Period": "1s",
+              "Limit": 10
+            }
+          ]
+        }
+      ]
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "RedisConnectstring": "localhost",
-    "RedisDb": 0,
-    "RedisPwd": "123456",
-    "SqlLiteWin": "Data Source=Db\\Data.dll;",
-    "SqlLiteLinux": "Data Source=Db/Data.dll;",
-    "MessageDb": "User Id=dbo;Password=romens;Data Source=192.168.100.9:1521/NewStddata;",
-    "WebSocketStatus": "0"
-  },
-  "urls":"http://*:5001",
-  "TaskApiUrls": {
-    "TaskApiUrl": "http://localhost:5001/api/HandleTask"
-  }
 }
