--- a/AutoTask/AutoTask.csproj
+++ b/AutoTask/AutoTask.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>D:\Projects\DotnetCore\AutoSchedule\CommonDll\</OutputPath>
+    <OutputPath>D:\Projects\DotnetCore\AutoSchedule\AutoSchedule\TaskDlls\</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
