--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -15,7 +15,7 @@
         "SqlLiteWin": "Data Source=Db\\Data.dll;",
         "SqlLiteLinux": "Data Source=Db/Data.dll;"
     },
-    "urls": "http://*:5001",
+    "urls": "http://localhost:5009",
     "TaskApiUrls": {
         "TaskApiUrl": "http://localhost:5001/api/HandleTask"
     },
