--- a/ExcuteInterface/ExcuteInterface.csproj
+++ b/ExcuteInterface/ExcuteInterface.csproj
@@ -14,12 +14,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.4" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>..\AutoTask\dll\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\CommonDll\Newtonsoft.Json.dll</HintPath>
     </Reference>
   </ItemGroup>
 
