--- a/AutoSchedule/NLog.config
+++ b/AutoSchedule/NLog.config
@@ -2,32 +2,27 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Info"
-      internalLogFile="CommonInfo.log">
-  <!--define various log targets-->
+      internalLogLevel="Error"
+      internalLogFile="internal-nlog.txt">
+
+  <!-- enable asp.net core layout renderers -->
   <extensions>
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
-  <targets>
-    <target xsi:type="Database"
-            name="db"
-            dbProvider="Microsoft.Data.Sqlite.SqliteConnection, Microsoft.Data.Sqlite"
-            connectionString="Data Source=Db/Data.dll;">
-      <commandText>
-        insert into Logs (TimestampUtc, Application, Level, Message, EventId, Logger)
-        values (@timestamputc, @application, @level, @message, @eventId, @logger);
-      </commandText>
-      <parameter name="@timestamputc" layout="${date:universalTime=false:format=yyyy-MM-dd HH\:mm\:ss.fff}" />
-      <parameter name="@application" layout="自动调度任务日志" />
-      <parameter name="@level" layout="${level}" />
-      <parameter name="@message" layout="${message}" />
-      <parameter name="@eventId" layout="${event-properties:EventId}" />
-      <parameter name="@logger" layout="${logger}" />
-    </target>
 
+  <!-- the targets to write to -->
+  <targets>
+    <target xsi:type="File" name="infofile" fileName="Log/info-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
+    <target xsi:type="File" name="errorFile" fileName="Log/error-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
+    <target xsi:type="File" name="debugFile" fileName="Log/debug-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
   </targets>
+  <!--${logger}|-->
   <rules>
-    <logger name="Microsoft.*"  maxlevel="Info" final="true"/>
-    <logger name="*" writeTo="db" minlevel="Info"/>
+    <logger name="*" minlevel="Error" maxlevel="Fatal" writeTo="errorFile" />
+    <logger name="*" minlevel="Info" maxlevel="Warn" writeTo="infoFile" />
+    <logger name="*" minlevel="Debug" maxlevel="Debug" writeTo="debugFile" />
   </rules>
 </nlog>
