--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -1,11 +1,11 @@
 {
     "Logging": {
         "IncludeScopes": false,
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft": "Warning ",
-            "Microsoft.Hosting.Lifetime": "Information"
-        }
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning ",
+        "Microsoft.Hosting.Lifetime": "Warning"
+      }
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
@@ -36,7 +36,7 @@
     //"ClientWhitelist": [ "dev-id-1", "dev-id-2" ],
     "GeneralRules": [
       {
-        "Endpoint": "*:/*/*",
+        "Endpoint": "post:/Home/*",
         "Period": "1s",
         "Limit": 2
       }
