--- a/AutoSchedule/appsettings.json
+++ b/AutoSchedule/appsettings.json
@@ -8,13 +8,15 @@
       }
     },
     "AllowedHosts": "*",
-    "ConnectionStrings": {
-        "RedisConnectstring": "152.136.31.172",
-        "RedisDb": 0,
-        "RedisPwd": "123456",
-        "SqlLiteWin": "Data Source=Db\\Data.dll;",
-        "SqlLiteLinux": "Data Source=Db/Data.dll;"
-    },
+  "ConnectionStrings": {
+    "RedisConnectstring": "152.136.31.172",
+    "RedisDb": 0,
+    "RedisPwd": "123456",
+    "SqlLiteWin": "Data Source=Db\\Data.dll;",
+    "SqlLiteLinux": "Data Source=Db/Data.dll;",
+    "SqlLiteLogWin": "Data Source=Db\\LogData.dll;",
+    "SqlLiteLogLinux": "Data Source=Db/LogData.dll;"
+  },
     "urls": "http://localhost:5009",
     "TaskApiUrls": {
         "TaskApiUrl": "http://localhost:5001/api/HandleTask"
