困扰很久的日志问题

--- a/AutoSchedule/nlogtxt.config
+++ b/AutoSchedule/nlogtxt.config
@@ -14,8 +14,8 @@
   <targets>
     <target xsi:type="File" name="infofile" fileName="Log/info-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
-    <target xsi:type="File" name="errorFile" fileName="Log/error-${shortdate}.log"
-            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
+    <target xsi:type="File" name="errorFile" fileName="Log/error-${shortdate}.log" 
+            layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${message} ${exception:format=tostring}" keepFileOpen="true" concurrentWrites="false"/>
     <target xsi:type="File" name="debugFile" fileName="Log/debug-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId_Id}|${uppercase:${level}}|${message} ${exception:format=tostring}" />
   </targets>
